Yet more generics cleanup.